# Industrial-Protocols-Test-bench

./: .gitignore  CMakeLists.txt
docs/: phase1_architecture.md  phase2_ui.md  phase3_serial.md  phase4_modbus.md  phase5_iec104.md  phase6_analyzer.md  phase7_simulator.md  phase8_integration.md
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/analyzer/: AnalyzedPacket.h  PacketAnalyzer.cpp  PacketAnalyzer.h  PacketFilter.h
src/core/engine/: ITestSession.h  TestEngine.cpp  TestEngine.h
src/core/models/: ProtocolFrame.h
src/core/protocols/: IProtocol.h  ProtocolRegistry.h
src/core/protocols/iec104/: IEC104Client.cpp  IEC104Client.h  IEC104DataPoint.h  IEC104Server.cpp  IEC104Server.h
src/core/protocols/modbus/: IModbusClient.h  ModbusRtuClient.cpp  ModbusRtuClient.h  ModbusTcpClient.cpp  ModbusTcpClient.h  ModbusTcpServer.cpp  ModbusTcpServer.h
src/core/protocols/serial/: SerialManager.cpp  SerialManager.h  SerialProtocol.cpp  SerialProtocol.h
src/core/simulator/: DeviceSimulator.cpp  DeviceSimulator.h  SimulatorScenario.h
src/services/: CMakeLists.txt  ServiceLocator.cpp  ServiceLocator.h
src/services/auth/: IAuthService.h
src/services/dev/: StubAuthService.cpp  StubAuthService.h  StubSubscriptionService.cpp  StubSubscriptionService.h
src/services/subscription/: ISubscriptionService.h  SubscriptionTier.h
src/ui/: CMakeLists.txt
src/ui/qml/: AppShell.qml  LoginPage.qml  main.qml
src/ui/qml/components/: NavItem.qml  ProLockOverlay.qml  Sidebar.qml  SidebarGroupLabel.qml  StatusBadge.qml  TopBar.qml
src/ui/qml/pages/: AnalyzerPage.qml  DashboardPage.qml  IEC104Page.qml  ModbusPage.qml  SerialPage.qml  SimulatorPage.qml
src/ui/qml/style/: AppStyle.qml  Icons.qml
src/ui/qml/theme/: ThemeManager.qml
src/ui/viewmodels/: AnalyzerController.cpp  AnalyzerController.h  AppViewModel.cpp  AppViewModel.h  IECController.cpp  IECController.h  ModbusController.cpp  ModbusController.h  NavigationViewModel.cpp  NavigationViewModel.h  SerialController.cpp  SerialController.h  SessionViewModel.cpp  SessionViewModel.h  SimulatorController.cpp  SimulatorController.h
src/utils/: AppConfig.h  CMakeLists.txt  Logger.cpp  Logger.h
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  tst_analyzer.cpp  tst_iec104.cpp  tst_integration.cpp  tst_modbus.cpp  tst_protocol_interface.cpp  tst_serial_manager.cpp  tst_server_modes.cpp  tst_simulator.cpp  tst_theme.qml  tst_ui_runner.cpp
